Use local css's and js's
Silences Google Page View Insights.

Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,8 +2,12 @@
       </div> <!-- page-content-wrapper -->
     </div> <!-- wrapper -->
 
+<!--
     <script src="https://ffmpeg.org/js/jquery.min.js"></script>
     <script src="https://ffmpeg.org/js/bootstrap.min.js"></script>
+-->
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
     <!-- Custom JavaScript for the Menu Toggle -->
     <script>
