report: DOn't write failed tests tab if there is no failed test
Silences W3C conformance checker error.

Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -179,7 +179,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
   </div>
 </div>
 
-<% if (l.summary.status < 2) { %>
+<% if (l.summary.status === 1) { %>
 <div role="tabpanel" class="tab-pane fade" id="failed_tests">
   <div class="table-responsive">
     <table class="replist table table-bordered" id="tests">
