--- a/views/report.ejs
+++ b/views/report.ejs
@@ -219,6 +219,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 </div>
 <% } %>
 
+<% if (l.summary.npass > 0) { %>
 <div role="tabpanel" class="tab-pane fade" id="passed_tests">
   <% var allPassed = l.report.filter(function(value) {
        return value.status === 0
@@ -229,7 +230,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
        </span>
   <% } %>
 </div>
-
+<% } %>
 
 </div>
 
