--- a/views/history.ejs
+++ b/views/history.ejs
@@ -29,6 +29,13 @@
 <% include header2.ejs %>
 Report history for <%= l.slot %>
 <% include header3.ejs %>
+
+<ul class="pager">
+  <li class="previous">
+    <a href="/">&larr; Index</a>
+  </li>
+</ul>
+
 <div class="table-responsive">
   <table class="table" id="config">
     <thead>
