report/passed tests: Don't use columns on xs screens
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -225,7 +225,7 @@ Report of <%= l.slot %> <%= l.summary.rev %>
        return value.status === 0
      })
      for (var i = 0; i < allPassed.length; i++) { %>
-       <span class="col-xs-4 col-sm-3">
+       <span class="col-xs-12 col-sm-4 col-md-3">
          <%= allPassed[i].name %>
        </span>
   <% } %>
