index: Working sorting
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,4 @@
+          <span>
         </div> <!-- page-content-inset -->
       </div> <!-- page-content-wrapper -->
     </div> <!-- wrapper -->
