--- a/views/report.ejs
+++ b/views/report.ejs
@@ -50,6 +50,9 @@ Report of <%= l.slot %> <%= l.summary.rev %>
 
 <ul class="pager">
   <li class="previous">
+    <a href="/">&larr; Index</a>
+  </li>
+  <li class="previous">
     <a href="/history/<%= l.slot %>">&larr; Slot History</a>
   </li>
 </ul>
