--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,9 +9,9 @@
     <!-- Custom JavaScript for the Menu Toggle -->
     <script>
       $("#menu-toggle").click(function (e) {
-          e.preventDefault();
-          $("#wrapper").toggleClass("active");
-      });
+          e.preventDefault()
+          $("#wrapper").toggleClass("active")
+      })
     </script>
 
   </body>
