--- a/views/replist.ejs
+++ b/views/replist.ejs
@@ -25,16 +25,19 @@
 <%/*
  * To use this, do something like this:
  *
- *     l.reps = [ parse.loadSummary('c', 20140101000000),
- *                parse.loadSummary('d', 20140102000000) ]
+ *     l.reps = [ parse.loadSummary('c', 20140101000000)
+ *              , parse.loadSummary('d', 20140102000000)
+ *              ]
  *
  * Then include this file. The input array of summaries must be in
  * `l.reps`.
  */%>
 
 <% var now = l.moment.utc() %>
-<% propsToDisplay = propsToDisplay || ['date', 'rev', 'subarch', 'os',
-                                       'cc', 'nwarn', 'results'] %>
+<% propsToDisplay = propsToDisplay || [
+                      'date', 'rev', 'subarch', 'os'
+                    , 'cc', 'nwarn', 'results'
+                    ] %>
 
 <% var headings = {
      date      : 'Time'
