fix table style
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -71,7 +71,7 @@ Report history for <%= l.slot %>
 </div>
 
 <div class="table-responsive">
-  <table class="replist table table-bordered" id="history">
+  <table class="replist table" id="history">
     <% var propsToDisplay = ['date', 'rev', 'nwarn', 'results'] %>
     <% include replist.ejs %>
   </table>
