--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 <%= l.config.branding %> FATE
 <% include header3.ejs %>
 <div class="table-responsive">
-  <table class="replist table table-bordered" id="history">
+  <table class="replist table" id="index">
     <% var propsToDisplay = [
            'date-link', 'rev', 'subarch', 'os', 'cc'
          , 'comment','nwarn', 'results'
