Hide rev column on xs and sm screens
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -72,7 +72,10 @@ Report history for <%= l.slot %>
 
 <div class="table-responsive">
   <table class="replist table" id="history">
-    <% var propsToDisplay = ['date', 'rev', 'nwarn', 'results'] %>
+    <% var propsToDisplay = ['date', 'rev', 'nwarn', 'results']
+         , extraClasses = {
+             rev: 'hidden-xs hidden-sm'
+           } %>
     <% include replist.ejs %>
   </table>
 </div>
