--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -9,10 +9,23 @@
     <!-- Custom JavaScript for the Menu Toggle -->
     <script>
       $("#menu-toggle").click(function (e) {
-          e.preventDefault()
-          $("#wrapper").toggleClass("active")
+        e.preventDefault()
+        $("#wrapper").toggleClass("active")
       })
     </script>
-
+    <script src="https://cdn.rawgit.com/bradvin/FooTable/2.0.3/js/footable.js"></script>
+    <script src="https://cdn.rawgit.com/bradvin/FooTable/2.0.3/js/footable.sort.js"></script>
+    <script>
+      $('.footable').footable({
+        breakpoints: {
+          xs: 360
+        , sm: 750
+        , md: 970
+        }
+      })
+      $(function () {
+        $('.footable').footable()
+      })
+    </script>
   </body>
 </html>
