--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,8 +13,8 @@
         $("#wrapper").toggleClass("active")
       })
     </script>
-    <script src="https://cdn.rawgit.com/bradvin/FooTable/2.0.3/js/footable.js"></script>
-    <script src="https://cdn.rawgit.com/bradvin/FooTable/2.0.3/js/footable.sort.js"></script>
+    <script src="/js/footable.min.js"></script>
+    <script src="/js/footable.sort.min.js"></script>
     <script>
       $('.footable').footable({
         breakpoints: {
