Sort nwarn as a numeric value
Signed-off-by: Timothy Gu <timothygu99@gmail.com>

--- a/views/replist.ejs
+++ b/views/replist.ejs
@@ -50,7 +50,7 @@
                   , nwarn     : 'Warnings'
                   , results   : 'Results'
                   }
-   , fooTableOp = { nwarn     : 'data-ignore="true" '
+   , fooTableOp = { nwarn     : 'data-ignore="true" data-type="numeric" '
                   , comment   : 'data-sort-ignore="true" '
                   }
    %>
