--- a/views/header2.ejs
+++ b/views/header2.ejs
@@ -7,6 +7,7 @@
     -->
     <link rel="stylesheet" href="/css/fate.css" />
     <link rel="stylesheet" href="/css/footable.core.min.css" />
+    <link rel="stylesheet" href="/css/footable.custom.css" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--[if lt IE 9]>
       <script src="//ffmpeg.org/js/html5shiv.min.js"></script>
